[gd_scene load_steps=8 format=2]

[ext_resource path="res://Physics/pm_Table.tres" type="PhysicsMaterial" id=1]
[ext_resource path="res://Die.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/CameraMove.gd" type="Script" id=3]
[ext_resource path="res://PlayerPool.gd" type="Script" id=4]
[ext_resource path="res://UIControl.gd" type="Script" id=5]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 0.995923, 1 )

[node name="Spatial" type="Spatial"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.772722, 0.634744, 0, -0.634744, 0.772722, 0, 13.8126, 18.8134 )
script = ExtResource( 3 )

[node name="Die Tray" type="Spatial" parent="."]

[node name="Field" type="StaticBody" parent="Die Tray"]
transform = Transform( 14.6967, 0, 0, 0, 2.10664, 0, 0, 0, 14.6967, 0, -1.94135, 0 )
physics_material_override = ExtResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="Die Tray/Field"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0330692, 0 )
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Die Tray/Field"]
shape = SubResource( 2 )

[node name="Field2" type="StaticBody" parent="Die Tray"]
transform = Transform( 14.6514, 0, 0, 0, 9.96426, 0, 0, 0, 0.948296, 0, 0, -16.0121 )
physics_material_override = ExtResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="Die Tray/Field2"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Die Tray/Field2"]
shape = SubResource( 2 )

[node name="Field4" type="StaticBody" parent="Die Tray"]
transform = Transform( 1, 0, 0, 0, 10.6495, 0, 0, 0, 14.7921, -15.2792, 1.90735e-06, -1.39756 )
physics_material_override = ExtResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="Die Tray/Field4"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Die Tray/Field4"]
shape = SubResource( 2 )

[node name="Field5" type="StaticBody" parent="Die Tray"]
transform = Transform( 1, 0, 0, 0, 10.6495, 0, 0, 0, 14.7921, 14.2662, 1.90735e-06, -1.39756 )
physics_material_override = ExtResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="Die Tray/Field5"]
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Die Tray/Field5"]
shape = SubResource( 2 )

[node name="PlayerDice" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.2942, 26.4367 )
script = ExtResource( 4 )

[node name="Die1" parent="PlayerDice" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )

[node name="Die2" parent="PlayerDice" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 0 )

[node name="Die3" parent="PlayerDice" instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )

[node name="Die4" parent="PlayerDice" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 0 )

[node name="Die5" parent="PlayerDice" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="btn_Roll" type="Button" parent="Control/CanvasLayer"]
margin_left = 849.54
margin_top = 512.421
margin_right = 993.54
margin_bottom = 575.421
text = "Roll"
__meta__ = {
"_edit_use_anchors_": false
}
